Refactor: spostata logica registrazione nel backend e miglioramento ui login.
